Created a separate folder for html files and fixed some minor bugs

--- a/html pages/about.html
+++ b/html pages/about.html
@@ -10,18 +10,18 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <!--Font for paragraph-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="style/about_style.css">
+    <link rel="stylesheet" href="../style/about_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>  
 <header>
     <div class="logo">
-        <a href="index.html"><img src="img/university_logo_small_vertical_blue.png" alt=""></a>
+        <a href="index.html"><img src="../img/university_logo_small_vertical_blue.png" alt=""></a>
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">University<br /> <small>Go Home</small></a></li>
+            <li><a href="../registration/index.php">University<br /> <small>Go Home</small></a></li>
             <li><a href="about.html">About<br /> <small>Meet Us</small></a></li>
             <li><a href="admissions.html">Admissions<br /> <small>Admissions</small></a></li>
             <li><a href="life.html">Students<br /> <small>Student Life</small></a></li>
@@ -41,12 +41,12 @@
         <blockquote class="quotation">"The encouragement of research . . . and the advancement 
         of individual scholars, who by their excellence will advance the sciences they pursue, 
         and the society where they dwell."</blockquote>
-        <img class="gilman" src = "img/gilman.jpg" style="float: right; margin-right: 100px; margin-left: 10px;">
+        <img class="gilman" src = "../img/gilman.jpg" style="float: right; margin-right: 100px; margin-left: 10px;">
         <p class = "paragraph">Gilman believed that <strong>teaching</strong> and <strong>research</strong> go hand in hand—that success in one depends on success in the other—and that a modern university must do both well. He also believed that sharing our <strong>knowledge</strong> and <strong>discoveries</strong> would help make the world a better place.In 140 years, we haven’t strayed from that vision. This is still a destination for excellent, ambitious scholars and a world leader in teaching and research. Distinguished professors mentor students in the arts and music, humanities, social and natural sciences, engineering, international studies, education, business, and the health professions. Those same faculty members, along with their colleagues at the university’s Applied Physics Laboratory, have made us the nation’s leader in federal research and development funding every year since 1979.That’s a fitting distinction for America’s first research university, a place that has revolutionized higher education in the U.S. and continues to bring knowledge and discoveries to the world.</p>
     </div>
 <footer>
     <div class="logo-footer">
-        <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+        <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
     </div>
     <div>
         <h4 class="footer-header">Contact us</h4>
