--- a/html pages/index.html
+++ b/html pages/index.html
@@ -6,13 +6,13 @@
     <link href='http://fonts.googleapis.com/css?family=Cutive' rel='stylesheet' type='text/css'>
     <!--Font for footer-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="style/index_style.css">
+    <link rel="stylesheet" href="../style/index_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
 </head>
 <body>
     <header>
     <div class="logo">
-            <a href="index.html"><img src="img/university_logo_small_vertical_blue.png" alt=""></a>
+            <a href="index.html"><img src="../img/university_logo_small_vertical_blue.png" alt=""></a>
     </div>
 
         <nav>
@@ -43,18 +43,18 @@
             <h5 class="blue-text">Johns Hopkins was founded on the principle that by pursuing big ideas and sharing what we learn, we make the world a better place. For more than 140 years, we haven’t strayed from that vision. Johns Hopkins is made up of nine academic divisions plus the Applied Physics Laboratory. Our faculty and students study, teach, and learn in and across more than 260 programs regularly recognized as being among the nation's best.</h5>
         </div>
         <div class="d50">
-            <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+            <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
         </div>
     </div>
     <div class="photo-block">
-        <div class="photo-block-mp"><img src="img/1.jpg" alt=""></div>
-        <div class="photo-block-mp"><img src="img/2.jpg" alt=""></div>
-        <div class="photo-block-mp"><img src="img/3.jpg" alt=""></div>
-        <div class="photo-block-mp"><img src="img/4.jpg" alt=""></div>
+        <div class="photo-block-mp"><img src="../img/1.jpg" alt=""></div>
+        <div class="photo-block-mp"><img src="../img/2.jpg" alt=""></div>
+        <div class="photo-block-mp"><img src="../img/3.jpg" alt=""></div>
+        <div class="photo-block-mp"><img src="../img/4.jpg" alt=""></div>
     </div>
  <footer>
         <div class="logo-footer">
-            <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+            <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
         </div>
         <div>
             <h4 class="footer-header">Contact us</h4>
