--- a/html pages/registration.html
+++ b/html pages/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>John Hopkins University</title>
-    <link rel="stylesheet" type="text/css" href="style/login_style.css">
+    <link rel="stylesheet" type="text/css" href="../style/login_style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">  <!--Font family for the heading-->
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet"> <!--Font family for the page-->
 </head>
