--- a/html pages/admissions.html
+++ b/html pages/admissions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="style/admissions_style.css">
+    <link rel="stylesheet" type="text/css" href="../style/admissions_style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
 <script type="text/javascript">
@@ -17,14 +17,14 @@
 </head>
 
 <body>
-        <img id="image_parallex" src="img/gg.jpg" src="img/university_logo_small_vertical_blue.png" height="775px" width="100%">
+        <img id="image_parallex" src="../img/gg.jpg" src="../img/university_logo_small_vertical_blue.png" height="775px" width="100%">
 <div id="content">
         <div class="logo">
-            <a href="index.html"><img src="img/university_logo_small_vertical_blue.png" alt=""></a>
+            <a href="index.html"><img src="../img/university_logo_small_vertical_blue.png" alt=""></a>
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">University<br/><small>Go Home</small></a></li>
+                <li><a href="../registration/index.php">University<br/><small>Go Home</small></a></li>
                 <li><a href="about.html">About<br/><small>Meet Us</small></a></li>
                 <li><a href="admissions.html">Admissions<br/><small>Admissions</small></a></li>
                 <li><a href="life.html">Students<br/><small>Student Life</small></a></li>
@@ -54,7 +54,7 @@
         <br>
        <footer>
     <div class="logo-footer">
-        <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+        <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
     </div>
     <div>
         <h4 class="footer-header">Contact us</h4>
