--- a/html pages/contact.html
+++ b/html pages/contact.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!--Font for paragpraph-->
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-    <link rel="stylesheet" href="style/contact_style.css">
+    <link rel="stylesheet" href="../style/contact_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">University<br /> <small>Go Home</small></a></li>
+            <li><a href="../registration/index.php">University<br /> <small>Go Home</small></a></li>
             <li><a href="about.html">About<br /> <small>Meet Us</small></a></li>
             <li><a href="admissions.html">Admissions<br /> <small>Admissions</small></a></li>
             <li><a href="life.html">Students<br /> <small>Student Life</small></a></li>
@@ -70,7 +70,7 @@
 
 <footer>
     <div class="logo-footer">
-        <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+        <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
     </div>
     <div>
         <h4 class="footer-header">Contact us</h4>
