--- a/html pages/life.html
+++ b/html pages/life.html
@@ -10,18 +10,18 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <!--Font for paragraph-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="style/life_style.css">
+    <link rel="stylesheet" href="../style/life_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>  
 <header>
     <div class="logo">
-        <a href="index.html"><img src="img/university_logo_small_vertical_blue.png" alt=""></a>
+        <a href="index.html"><img src="../img/university_logo_small_vertical_blue.png" alt=""></a>
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">University<br /> <small>Go Home</small></a></li>
+            <li><a href="../registration/index.php">University<br /> <small>Go Home</small></a></li>
             <li><a href="about.html">About<br /> <small>Meet Us</small></a></li>
             <li><a href="admissions.html">Admissions<br /> <small>Admissions</small></a></li>
             <li><a href="life.html">Students<br /> <small>Student Life</small></a></li>
@@ -49,7 +49,7 @@
 </div>
 <footer>
     <div class="logo-footer">
-        <img src="img/university_logo_small_vertical_blue.png" alt="Logo">
+        <img src="../img/university_logo_small_vertical_blue.png" alt="Logo">
     </div>
     <div>
         <h4 class="footer-header">Contact us</h4>
